--- a/3-Forms/taak01/invoer.html
+++ b/3-Forms/taak01/invoer.html
@@ -7,13 +7,24 @@
 </head>
 <body>
     <form name="invoer" action="mijngegevens.php" method="POST">
-            <input type="text" name="voornaam">
-            <input type="text" name="achternaam">
-            <input type="text" name="klas">
-            <input type="text" name="leeftijd">
-            <input type="text" name="adres">
-            <input type="text" name="plaatsnaam">
-            <input type="text" name="favoriete muziekband">
+            <input type="text" name="voornaam"> <br>
+            <input type="text" name="achternaam"> <br>
+            <input type="text" name="klas"> <br>
+            <input type="text" name="leeftijd"> <br>
+            <input type="text" name="adres"> <br>
+            <input type="text" name="plaatsnaam"> <br>
+            <input type="text" name="favoriete muziekband"> <br>
+
+            <input type="radio" id="man" name="gender" value="man"> <a>man</a> <br>
+            <input type="radio" id="vrouw" name="gender" value="vrouw">  <a>vrouw</a> <br>
+
+            <select name="lievelingskleur" id="lievelingskleur">
+                <option value="rood">rood</option>
+                <option value="blauw">blauw</option>
+                <option value="geel">geel</option>
+                <option value="groen">groen</option>
+                <option value="paars">paars</option>
+              </select>
             
 
             <input type="submit" naam="submit" value="verstuur">
